[gd_scene load_steps=8 format=2]

[ext_resource path="res://Cabin-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://demo-final/source_container.gd" type="Script" id=2]
[ext_resource path="res://demo-final/target_container.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.235294, 0.686275, 0.807843, 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[node name="DragAndDropDemo" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VLayout" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1221.0
margin_bottom = 713.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionHeader" type="HBoxContainer" parent="VLayout"]
margin_right = 1214.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SrcHeader" type="Panel" parent="VLayout/DescriptionHeader"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
custom_styles/panel = SubResource( 5 )

[node name="SourceLabel" type="Label" parent="VLayout/DescriptionHeader/SrcHeader"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Source"
align = 1
valign = 1

[node name="HeaderDivider" type="Panel" parent="VLayout/DescriptionHeader"]
margin_left = 254.0
margin_right = 960.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )

[node name="Reset" type="Button" parent="VLayout/DescriptionHeader/HeaderDivider"]
margin_left = 161.0
margin_top = 10.0
margin_right = 313.0
margin_bottom = 47.0
text = "RESET"

[node name="TargetHeader" type="Panel" parent="VLayout/DescriptionHeader"]
margin_left = 964.0
margin_right = 1214.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 0 )
custom_styles/panel = SubResource( 5 )

[node name="TargetLabel" type="Label" parent="VLayout/DescriptionHeader/TargetHeader"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Target"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragAndDropColumns" type="HBoxContainer" parent="VLayout"]
margin_top = 54.0
margin_right = 1214.0
margin_bottom = 706.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceContainer" type="Panel" parent="VLayout/DragAndDropColumns"]
margin_right = 250.0
margin_bottom = 652.0
rect_min_size = Vector2( 250, 0 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Padding" type="MarginContainer" parent="VLayout/DragAndDropColumns/SourceContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="VLayout/DragAndDropColumns/SourceContainer/Padding"]
margin_left = 20.0
margin_top = 20.0
margin_right = 230.0
margin_bottom = 632.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SrcTargetDivider" type="Panel" parent="VLayout/DragAndDropColumns"]
margin_left = 254.0
margin_right = 1214.0
margin_bottom = 652.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="TargetContainer" parent="VLayout/DragAndDropColumns" instance=ExtResource( 3 )]
visible = false
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 760.0
margin_top = 0.0
margin_right = 1010.0
margin_bottom = 532.0

[node name="Button" type="Button" parent="VLayout/DragAndDropColumns/TargetContainer"]
margin_right = 152.0
margin_bottom = 33.0

[connection signal="pressed" from="VLayout/DescriptionHeader/HeaderDivider/Reset" to="VLayout/DragAndDropColumns/SourceContainer" method="_on_Reset_pressed"]

[editable path="VLayout/DragAndDropColumns/TargetContainer"]
